--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Сайт-портфолио</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="https://github.com/Makcim1988/portfolio/blob/main/styles/style.css">
     </head>
     <body>
         <div id="wrapper">
